ctapmex 2021-12-08 18:00:00+00:00 - build 106

1. рефакторинг

ctapmex 2021-12-04 18:00:00+00:00 - build 105

1. Mantis#0003921: Ошибка формирования пути.
2. ошибка в 104.1

ctapmex 2021-12-01 17:30:00+00:00 - build 104

1. Mantis#0003910: При переходе по шарам плагин кэширует первый сервер и дальше подставляет его
2. Актуализирована справка по диалогу настроек плагина

ctapmex 2021-11-29 15:30:00+00:00 - build 103

1. Добавлена опция "Сканировать сеть", позволяющая отключить сканирование сети для поиска устройств.
2. Актуализирована справка по диалогу настроек плагина

ctapmex 2021-11-28 13:30:00+00:00 - build 102

1. откат 100.2

ctapmex 2021-11-28 13:00:00+00:00 - build 101

1. Восстановлена работа с Favorites. Папки внутри Favorites больше не поддерживаются.

ctapmex 2021-11-27 13:39:06+00:00 - build 100

1. рефакторинг
2. удалено использование RestoreScreen

w17 2017-03-23 21:34:03+03:00 - build 99

1. forum: Автоматическая замена шары на букву диска
   При переходе из списка шар сервера к выделенному элементу по Enter теперь не происходит
   переход к диску если он назначен, по Ctrl-PgDn - старое поведение (если есть диск - переход к нему).

zg 2016-06-28 00:01:31+02:00 - build 98

1. поддержка фаровской истории.

drkns 2016-06-22 21:50:58+02:00 - build 97

1. Некорректно отображались надписи на линейке клавиш.

2. Уточнения английской локализации.

drkns 2015-12-28 15:16:43+02:00 - build 96

1. Теперь настройки ещё и работают.

drkns 2014-05-01 12:39:45+02:00 - build 95

1. Mantis#0002654: TechInfo #35: Network/HiddenSharesAsHidden
   Редизайн настроек.

svs 2014-04-23 14:23:34+04:00 - build

1. Mantis#0002654: TechInfo #35: Network/HiddenSharesAsHidden
   Уточнение хелпа

svs 2014-04-22 18:16:58+04:00 - build 94

1. Mantis#0002654: TechInfo #35: Network/HiddenSharesAsHidden
   группировка опций в настройках плагина

svs 2014-04-21 11:51:29+04:00 - build 93

1. Уточнение build 92

svs 2014-04-21 11:23:21+04:00 - build 92
